syntax = "proto3";

package org.tomasmo.plurpy.v1.account;

import "v1/account/Account.proto";

//TODO Add all CRUD operations
service AccountsService {

  // Creates an account and returns a bearer token for the account
  //
  // Notes:
  // No verification of the account is done to make sure it's not a bot
  // The endpoint is not rate limited
  rpc Signup(SignupRequest) returns (SignupResponse) {}

  // Returns account access token that should be used in other endpoints for authorization
  //
  // Expected errors:
  // 401 (Unauthorized) - when user is not found or credentials are incorrect
  rpc Login(LoginRequest) returns (LoginResponse) {}

  // Returns currently logged in account details
  //
  // Expected errors:
  // 401 (Unauthorized) - when access tokes is missing or invalid
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {}
}

message SignupRequest {
  AccountInfo account_info = 1;
  string password = 2;
}

message SignupResponse {
  Account account = 1;
  string access_token = 2;
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message GetAccountRequest {
}

message GetAccountResponse {
  Account account = 1;
}